Styles/project_style.css
.project_container{

    width: 100%;
    height: auto;

    margin-bottom: 2dvh;
    margin-left: 0;

    border-style: solid;
    border-width: 2px;
    border-radius: var(--border_radius);
    border-color: var(--object_color);

    overflow: auto;

    /* color: black; */
    background-color: var(--container_color);

    @media (orientation: portrait) {
        overflow-x: hidden;
    }
}

.project_grid{
    display: grid;
    grid-template-columns: 50% 50%;

    @media (orientation: portrait) {
        margin-top: 0;
        grid-template-columns: 100%;
    }
}

.project_header{
    width: 100%;
}

.project_picture{
    /* Formatting */
    float: left;
    height: auto;

    /* Corners */
    border-radius: var(--border_radius);
}

.game_project_body{
    /* Formatting */
    /* box-sizing:border-box; */
    /* float: left; */
    /* max-height: 45dvh; */
    /* width: calc(50% - 4%); */
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 65px 30rem auto;

    padding: 1dvh;
    margin: calc(1% - 2px);

    /* Corners */
    border-style: solid; 
    border-width: 2px;
    border-radius: var(--border_radius);
    border-color: var(--object_color);

    /* Colors */
    color: var(--another_color);
    background-color: var(--container_color);

    /* Scroll Settings */    
    overflow-x: hidden;
    overflow-y: auto;
    scrollbar-color: var(--container_color) var(--object_color);
    scrollbar-width: thin;

    @media (orientation: portrait) {
        height: auto;
        width: 98%;
        /* box-sizing: border-box; */
    }
}

.blueprint_image{
    overflow: scroll;
    overflow-x: scroll;
    overflow-y: scroll;
    max-width: 100%;
}

.redirect_button{
    padding: 5px;
    border-radius: var(--border_radius);

    background-color: var(--object_color);

    color: var(--another_color);
    text-decoration: none;
    height: 1.5rem;
    align-self: end;
    width: 5.5rem;
    align-content: center;
}
@media (hover: hover) {
/* when hover is supported */
    .redirect_button:hover {
        color: var(--container_color);
        background-color: var(--back_color);
    }
}
#grow_bot_image{
    height: var(--picture_size);
    max-width: 100%;
    width: 100%;
    background-image: url('/Images/OptimizedPosters/Growbot_Poster.webp');
    background-repeat: no-repeat;
    background-size: contain;
}

#dark_descent_image{
    height: var(--picture_size);
    max-width: 100%;
    width: 100%;
    background-image: url('/Images/OptimizedPosters/dark_descent_poster.webp');
    background-repeat: no-repeat;
    background-size: contain;
}

#in_bloom_image{
    height: var(--picture_size);
    max-width: 100%;
    width: 100%;
    background-image: url('/Images/OptimizedPosters/in_bloom.webp');
    background-repeat: no-repeat;
    background-size: contain;
}

